# WisCore-SDK

./: Makefile  README.md
products/7688tiny/: ChangeLog.txt  Makefile  opwrt-7688tiny-v001-20170707.config
products/7688tiny/application/rakavs/alexa_demo/include/: avcodec.h  avs_private.h  ffplayer_dec.h  player_io.h  utils.h
products/7688tiny/application/rakavs/alexa_demo/src/: Makefile  alexa_alert.c  alexa_common.h  alexa_media.h  build_op.sh  config.mk  getcodechallenge.h  plugin_alexa.c  rk_string.c  rk_string.h  vprocTw_Hal.h
products/7688tiny/application/rakavs/common/include/: RKGpioApi.h
products/7688tiny/application/rakavs/common/src/: RKIoctrlApi.c  RKUartApi.c
products/7688tiny/application/rakavs/gpioctrl/: Makefile  build_op.sh
products/7688tiny/application/rakavs/libavio/src/: av_test.c  dec_mp3.c  dec_raw.c  dec_raw.h
products/7688tiny/application/rakavs/luci_service/: Makefile  utils.h
products/7688tiny/application/rakavs/tunnel/: Makefile
products/7688tiny/feeds/linkit/: Makefile
products/7688tiny/package/utils/wisapps/src/: msload_go.sh
products/wisAp/: ChangeLog.txt  Makefile  opwrt-wisap-topv002-1-20170525_config  opwrt-wisap-topv003-1-20170626_config  opwrt-wisap-topv004-1-20180306_config
products/wisAp/package/: Makefile  create-package-native.sh
products/wisAp/package/utils/: Makefile
products/wisAp/package/utils/wisapps/: Makefile
products/wisAp/package/utils/wisapps/src/: alexa_run_demo  gpio_ctrl  luci_service  msload_go.sh  recoverboard.sh  tunnel
products/wisAvs/: ChangeLog.txt  Makefile
products/wisAvs/applicantion/: README.md
products/wisAvs/applicantion/rakavs/alexa_demo/: CMakeLists.txt
products/wisAvs/applicantion/rakavs/alexa_demo/include/aplay/: aplay.h
products/wisAvs/applicantion/rakavs/alexa_demo/include/linux/spi/: zl380tw.h
products/wisAvs/applicantion/rakavs/alexa_demo/src/: audio_player.c  led.c
products/wisAvs/applicantion/rakavs/cmake/: mt7628-openwrt-Toolchain.cmake
products/wisAvs/applicantion/rakavs/common/include/: RKGpioApi.h
products/wisAvs/applicantion/rakavs/gpioctrl/: CMakeLists.txt
products/wisAvs/applicantion/rakavs/libavio/: CMakeLists.txt
products/wisAvs/applicantion/rakavs/libavio/include/: utils.h.gch
products/wisAvs/applicantion/rakavs/libavio/src/: audio_ao.c  dec_mp3.h  player_io.c
products/wisAvs/applicantion/rakavs/luci_service/: CMakeLists.txt
products/wisAvs/applicantion/rakavs/luci_service/src/: httpd.h  luci_service.c  updateconfigfile.c  updateconfigfile.h
products/wisAvs/applicantion/rakavs/tunnel/src/: tunnel.c
products/wisAvs/application/rakavs/: CMakeLists.txt
products/wisAvs/application/rakavs/alexa_demo/src/: audio_player.h  plugin_alexa.c
products/wisAvs/application/rakavs/common/include/: RKIoctrlDef.h
products/wisAvs/application/rakavs/common/src/: RKGpioApi.c
products/wisAvs/application/rakavs/libavio/src/: Makefile_share  audio_ao.h
products/wisAvs/application/rakavs/luci_service/: CMakeLists.txt  build_op.sh  httpd-b.c  httpd.c
products/wisAvs/application/rakavs/luci_service/lib/: 1.txt
products/wisAvs/package/utils/wisapps/: Makefile
products/wisAvs/package/utils/wisapps/include/: vprocTwolf_access.h  vproc_common.h
products/wisAvs/package/utils/wisapps/src/: luci_service  msload_go.sh
products/wisCore/: Makefile  opwrt-wisavs-topv002-1-20170519.config  opwrt-wisavs-topv002-1-20171016.config
products/wisCore/application/rakavs/alexa_demo/include/: avs.h  hls.h  vproc_common.h
products/wisCore/application/rakavs/alexa_demo/src/: audio_capture.h  plugin_alexa.h
products/wisCore/application/rakavs/common/include/: RKUartApi.h
products/wisCore/application/rakavs/gpioctrl/: CMakeLists.txt
products/wisCore/application/rakavs/gpioctrl/include/: led.h
products/wisCore/application/rakavs/gpioctrl/src/: gpio_ctrl.c
products/wisCore/application/rakavs/libavio/src/: audio_debug.h  audio_queue.c
products/wisCore/application/rakavs/tunnel/: CMakeLists.txt
products/wisCore/application/wisapps-2.2/: CMakeLists.txt
products/wisCore/application/wisapps-2.2/alexa_demo/: CMakeLists.txt
products/wisCore/application/wisapps-2.2/alexa_demo/include/: alexa_common.h  audio_decodeItf.h  audio_playerItf.h  player_io.h.ok  vprocTw_Hal.h  vprocTwolf_access.h  vproc_common.h
products/wisCore/application/wisapps-2.2/alexa_demo/src/: audio_player.c  audio_player.h  plugin_alexa.c  plugin_alexa.h
products/wisCore/application/wisapps-2.2/alexa_demo/src/capture/: audio_capture.c  audio_capture.h  audio_queue.c
products/wisCore/application/wisapps-2.2/alexa_demo/src/led/: RKLed.c  RKLed.h  RKLedio.c  RKLedio.h
products/wisCore/application/wisapps-2.2/cmake/: mt7628-openwrt-Toolchain.cmake
products/wisCore/application/wisapps-2.2/common/include/: RKIoctrlDef.h  RKLog.h
products/wisCore/application/wisapps-2.2/common/src/: RKGpioApi.c  RKIoctrlApi.c  RKLog.c  RKUartApi.c
products/wisCore/application/wisapps-2.2/gpioctrl/: CMakeLists.txt  Makefile
products/wisCore/application/wisapps-2.2/gpioctrl/src/: gpio_ctrl.c
products/wisCore/application/wisapps-2.2/luci_service/: CMakeLists.txt  Makefile
products/wisCore/application/wisapps-2.2/luci_service/include/: httpd.h  updateconfigfile.h
products/wisCore/application/wisapps-2.2/luci_service/src/: httpd.c  luci_service.c  updateconfigfile.c
products/wisCore/application/wisapps-2.2/ssl/certs/: ca.crt  dlsclient.crt  (+1 more)
products/wisCore/application/wisapps-2.2/tunnel/: CMakeLists.txt  Makefile  build_op.sh
products/wisCore/package/utils/: Makefile
products/wisCore/package/utils/wisapps/: Makefile
products/wisCore/package/utils/wistools/: Makefile
products/wisLora/: opwrt-wisap-topv001-1-20180308_config
products/wisLora/package/utils/packet_forwarder/: Makefile
products/wisTiny/: Makefile  opwrt-wistiny-v001-20170707.config_simp
products/wisTiny/application/rakavs/gpioctrl/: gpio_ctrl
products/wisTiny/feeds/: Makefile
products/wisTiny/feeds/linkit/mtk-linkit/: Makefile
wiswrt/rak/: create-workspace.sh
wiswrt/rak/purewrt-rc2/scripts/: download.pl
(+30 files in other folders)
